--- a/.github/workflows/test_and_deploy.yml
+++ b/.github/workflows/test_and_deploy.yml
@@ -3,7 +3,7 @@ name: Test and Deploy
 on:
   # Run this workflow every time a PR is opened or a new commit is pushed to the PR
   pull_request:
-  # Run this workflow every time a PR is merged to master
+  # Run this workflow every time a PR is merged to main
   push:
     branches:
       - main
@@ -19,19 +19,37 @@ jobs:
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
-      - name: Lint using Black
-        uses: github/super-linter@v3
-        env:
-          DEFAULT_BRANCH: main
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          VALIDATE_PYTHON_BLACK: true
-      - name: Conda Build
+      - name: Setup conda env
         run: |
           source "$CONDA/etc/profile.d/conda.sh"
           conda config --set always_yes yes --set changeps1 no
           conda update -q conda
           conda info -a
           conda install -q conda-build
+          conda env create -f continuous_integration/environment-${{ env.MAIN_PYVER }}.yml
+          conda activate mg
+          pip install -e .
+      - name: Lint with Black
+        run: |
+          source "$CONDA/etc/profile.d/conda.sh"
+          conda activate mg
+          black metagraph *.py --check --diff
+      - name: Pytest
+        run: |
+          source "$CONDA/etc/profile.d/conda.sh"
+          conda activate mg
+          pytest --pyargs metagraph
+      - name: Coveralls
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          source "$CONDA/etc/profile.d/conda.sh"
+          conda activate mg
+          conda install -c conda-forge coveralls
+          coveralls
+      - name: Conda Build
+        run: |
+          source "$CONDA/etc/profile.d/conda.sh"
           conda build -c defaults -c conda-forge --python ${{ env.MAIN_PYVER }} continuous_integration/conda
           # This doesn't rebuild, but simply computes the name of the file that was previously built
           OUTPUT=$(conda build --output -c defaults -c conda-forge --python ${{ env.MAIN_PYVER }} continuous_integration/conda)
@@ -59,10 +77,6 @@ jobs:
         with:
           name: built_package
           path: ./artifact_storage
-      - name: Setup Python ${{ matrix.pyver }}
-        uses: actions/setup-python@v2
-        with:
-          python-version: ${{ matrix.pyver }}
       - name: Setup conda env
         run: |
           source "$CONDA/etc/profile.d/conda.sh"
@@ -75,19 +89,20 @@ jobs:
           conda install ./artifact_storage/$BUILT_PKG
           # Install dependencies listed in built package
           # (This is a workaround because conda does not install dependencies for local file installs)
-          conda update -c defaults -c conda-forge -c stellargraph metagraph_stellargraph
+          conda update -c defaults -c conda-forge -c metagraph/label/dev -c stellargraph metagraph_stellargraph
           conda list
       - name: Pytest
         run: |
           source "$CONDA/etc/profile.d/conda.sh"
           conda activate mg
+          pytest --pyargs metagraph_stellargraph
           python -m metagraph.tests
           python -m metagraph.tests --dask
 
   dev_deploy:
     runs-on: ubuntu-latest
     needs: test_pyver
-    if: github.ref == 'refs/heads/master'
+    if: github.ref == 'refs/heads/main'
     steps:
       - name: Download build artifact
         uses: actions/download-artifact@v2
