--- a/.github/workflows/test_and_deploy.yml
+++ b/.github/workflows/test_and_deploy.yml
@@ -33,7 +33,7 @@ jobs:
         run: |
           source "$CONDA/etc/profile.d/conda.sh"
           conda activate mg
-          black metagraph *.py --check --diff
+          black metagraph_stellargraph *.py --check --diff
       - name: Pytest
         run: |
           source "$CONDA/etc/profile.d/conda.sh"
