--- a/.github/workflows/test_and_deploy.yml
+++ b/.github/workflows/test_and_deploy.yml
@@ -10,6 +10,7 @@ on:
 
 env:
   MAIN_PYVER: 3.8
+  CHANNELS: defaults -c conda-forge -c metagraph/label/dev -c stellargraph
 
 jobs:
   build:
@@ -50,9 +51,9 @@ jobs:
       - name: Conda Build
         run: |
           source "$CONDA/etc/profile.d/conda.sh"
-          conda build -c defaults -c conda-forge --python ${{ env.MAIN_PYVER }} continuous_integration/conda
+          conda build -c ${{ env.CHANNELS }} --python ${{ env.MAIN_PYVER }} continuous_integration/conda
           # This doesn't rebuild, but simply computes the name of the file that was previously built
-          OUTPUT=$(conda build --output -c defaults -c conda-forge --python ${{ env.MAIN_PYVER }} continuous_integration/conda)
+          OUTPUT=$(conda build --output -c ${{ env.CHANNELS }} --python ${{ env.MAIN_PYVER }} continuous_integration/conda)
           echo "Path to built package:"
           echo $OUTPUT
           echo "CONDA_BUILD_OUTPUT=$OUTPUT" >> $GITHUB_ENV
@@ -87,15 +88,16 @@ jobs:
           # Install built_package
           BUILT_PKG=`ls ./artifact_storage | head -1`
           conda install ./artifact_storage/$BUILT_PKG
+          conda list
           # Install dependencies listed in built package
           # (This is a workaround because conda does not install dependencies for local file installs)
-          conda update -c defaults -c conda-forge -c metagraph/label/dev -c stellargraph metagraph_stellargraph
+          conda update -c ${{ env.CHANNELS }} metagraph-stellargraph
           conda list
       - name: Pytest
         run: |
           source "$CONDA/etc/profile.d/conda.sh"
           conda activate mg
-          pytest --pyargs metagraph_stellargraph
+#          pytest --pyargs metagraph_stellargraph
           python -m metagraph.tests
           python -m metagraph.tests --dask
 
