--- a/.github/workflows/test_and_deploy.yml
+++ b/.github/workflows/test_and_deploy.yml
@@ -7,6 +7,8 @@ on:
   push:
     branches:
       - main
+    tags:
+      - '*'
 
 env:
   MAIN_PYVER: 3.8
@@ -104,14 +106,18 @@ jobs:
   dev_deploy:
     runs-on: ubuntu-latest
     needs: test_pyver
-    if: github.ref == 'refs/heads/main'
+    if: (github.ref == 'refs/heads/main') || contains(github.ref, 'refs/tags/')
     steps:
       - name: Download build artifact
         uses: actions/download-artifact@v2
         with:
           name: built_package
           path: ./artifact_storage
-      - name: Deploy with dev label
+      - name: Determine label
+        if: contains(github.ref, 'refs/tags/')
+        run: |
+          echo "AC_LABEL=main" >> $GITHUB_ENV
+      - name: Deploy to Anaconda Cloud
         run: |
           source "$CONDA/etc/profile.d/conda.sh"
           conda config --set always_yes yes --set changeps1 no
@@ -119,4 +125,4 @@ jobs:
           ls -la ./artifact_storage
           UPLOAD=`ls ./artifact_storage | head -1`
           echo "Uploading $UPLOAD with label=dev"
-          $CONDA/bin/anaconda -t ${{ secrets.ANACONDA_ORG_TOKEN }} upload -u metagraph -l dev --no-progress --force --no-register ./artifact_storage/$UPLOAD
+          $CONDA/bin/anaconda -t ${{ secrets.ANACONDA_ORG_TOKEN }} upload -u metagraph -l ${{ env.AC_LABEL }} --no-progress --force --no-register ./artifact_storage/$UPLOAD
