--- a/.github/workflows/test_and_deploy.yml
+++ b/.github/workflows/test_and_deploy.yml
@@ -96,10 +96,10 @@ jobs:
           conda update -c ${{ env.CHANNELS }} metagraph-stellargraph
           conda list
       - name: Pytest
+        # TODO: add `pytest --pyargs metagraph_stellargraph` once tests actually exist
         run: |
           source "$CONDA/etc/profile.d/conda.sh"
           conda activate mg
-#          pytest --pyargs metagraph_stellargraph
           python -m metagraph.tests
           python -m metagraph.tests --dask
 
@@ -124,5 +124,5 @@ jobs:
           conda install -q anaconda-client
           ls -la ./artifact_storage
           UPLOAD=`ls ./artifact_storage | head -1`
-          echo "Uploading $UPLOAD with label=dev"
-          $CONDA/bin/anaconda -t ${{ secrets.ANACONDA_ORG_TOKEN }} upload -u metagraph -l ${{ env.AC_LABEL }} --no-progress --force --no-register ./artifact_storage/$UPLOAD
+          echo "Uploading $UPLOAD with label=${{ env.AC_LABEL }}"
+          $CONDA/bin/anaconda -t ${{ secrets.ANACONDA_ORG_TOKEN }} upload -u metagraph -l ${{ env.AC_LABEL }} --no-progress --force --register ./artifact_storage/$UPLOAD
