Fix package name to use hyphen

--- a/continuous_integration/conda/meta.yaml
+++ b/continuous_integration/conda/meta.yaml
@@ -1,5 +1,5 @@
 package:
-   name: metagraph_stellargraph
+   name: metagraph-stellargraph
    version: {{ environ.get('GIT_DESCRIBE_TAG', 'unknown') }}
 
 source:
