--- a/.github/workflows/test_and_deploy.yml
+++ b/.github/workflows/test_and_deploy.yml
@@ -112,6 +112,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: test_pyver
     if: (github.ref == 'refs/heads/main') || contains(github.ref, 'refs/tags/')
+    env:
+      AC_LABEL: dev
     steps:
       - name: Download build artifact
         uses: actions/download-artifact@v2
