--- a/.github/workflows/test_and_deploy.yml
+++ b/.github/workflows/test_and_deploy.yml
@@ -3,13 +3,16 @@ name: Test and Deploy
 on:
   # Run this workflow every time a PR is opened or a new commit is pushed to the PR
   pull_request:
-  # Run this workflow every time a PR is merged to master
+  # Run this workflow every time a PR is merged to main
   push:
     branches:
       - main
+    tags:
+      - '*'
 
 env:
   MAIN_PYVER: 3.8
+  CHANNELS: defaults -c conda-forge -c metagraph/label/dev -c stellargraph
 
 jobs:
   build:
@@ -19,18 +22,40 @@ jobs:
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
-      - name: Lint using Black
-        uses: github/super-linter@v3
+      - name: Setup conda env
+        run: |
+          source "$CONDA/etc/profile.d/conda.sh"
+          conda config --set always_yes yes --set changeps1 no
+          conda update -q conda
+          conda info -a
+          conda install -q conda-build
+          conda env create -f continuous_integration/environment-${{ env.MAIN_PYVER }}.yml
+          conda activate mg
+          pip install -e .
+      - name: Lint with Black
+        run: |
+          source "$CONDA/etc/profile.d/conda.sh"
+          conda activate mg
+          black metagraph_stellargraph *.py --check --diff
+      - name: Pytest
+        run: |
+          source "$CONDA/etc/profile.d/conda.sh"
+          conda activate mg
+          pytest --pyargs metagraph
+      - name: Coveralls
         env:
-          DEFAULT_BRANCH: main
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          VALIDATE_PYTHON_BLACK: true
+        run: |
+          source "$CONDA/etc/profile.d/conda.sh"
+          conda activate mg
+          conda install -c conda-forge coveralls
+          coveralls
       - name: Conda Build
         run: |
           source "$CONDA/etc/profile.d/conda.sh"
-          conda build -c defaults -c conda-forge --python ${{ env.MAIN_PYVER }} continuous_integration/conda
+          conda build -c ${{ env.CHANNELS }} --python ${{ env.MAIN_PYVER }} continuous_integration/conda
           # This doesn't rebuild, but simply computes the name of the file that was previously built
-          OUTPUT=$(conda build --output -c defaults -c conda-forge --python ${{ env.MAIN_PYVER }} continuous_integration/conda)
+          OUTPUT=$(conda build --output -c ${{ env.CHANNELS }} --python ${{ env.MAIN_PYVER }} continuous_integration/conda)
           echo "Path to built package:"
           echo $OUTPUT
           echo "CONDA_BUILD_OUTPUT=$OUTPUT" >> $GITHUB_ENV
@@ -55,10 +80,6 @@ jobs:
         with:
           name: built_package
           path: ./artifact_storage
-      - name: Setup Python ${{ matrix.pyver }}
-        uses: actions/setup-python@v2
-        with:
-          python-version: ${{ matrix.pyver }}
       - name: Setup conda env
         run: |
           source "$CONDA/etc/profile.d/conda.sh"
@@ -66,36 +87,49 @@ jobs:
           conda update -q conda
           conda create -n mg python=${{ matrix.pyver }} pytest coverage pytest-cov
           conda activate mg
+          # TODO: remove this hack once no longer needed; without this, tensorflow gets installed incorrectly
+          #       which leads to a segfault
+          conda install -c stellargraph -c defaults -c conda-forge stellargraph 'tensorflow-base>=2.3.0'
           # Install built_package
           BUILT_PKG=`ls ./artifact_storage | head -1`
           conda install ./artifact_storage/$BUILT_PKG
+          conda list
           # Install dependencies listed in built package
           # (This is a workaround because conda does not install dependencies for local file installs)
-          conda update -c defaults -c conda-forge -c stellargraph metagraph_stellargraph
+          conda update -c ${{ env.CHANNELS }} metagraph-stellargraph
           conda list
       - name: Pytest
+        # TODO: add `pytest --pyargs metagraph_stellargraph` once tests actually exist
         run: |
           source "$CONDA/etc/profile.d/conda.sh"
           conda activate mg
+          python -c 'import stellargraph'
+          python -c 'import metagraph_stellargraph.plugins; assert metagraph_stellargraph.plugins.has_stellargraph'
           python -m metagraph.tests
           python -m metagraph.tests --dask
 
   dev_deploy:
     runs-on: ubuntu-latest
     needs: test_pyver
-    if: github.ref == 'refs/heads/master'
+    if: (github.ref == 'refs/heads/main') || contains(github.ref, 'refs/tags/')
+    env:
+      AC_LABEL: dev
     steps:
       - name: Download build artifact
         uses: actions/download-artifact@v2
         with:
           name: built_package
           path: ./artifact_storage
-      - name: Deploy with dev label
+      - name: Determine label
+        if: contains(github.ref, 'refs/tags/')
+        run: |
+          echo "AC_LABEL=main" >> $GITHUB_ENV
+      - name: Deploy to Anaconda Cloud
         run: |
           source "$CONDA/etc/profile.d/conda.sh"
           conda config --set always_yes yes --set changeps1 no
           conda install -q anaconda-client
           ls -la ./artifact_storage
           UPLOAD=`ls ./artifact_storage | head -1`
-          echo "Uploading $UPLOAD with label=dev"
-          $CONDA/bin/anaconda -t ${{ secrets.ANACONDA_ORG_TOKEN }} upload -u metagraph -l dev --no-progress --force --no-register ./artifact_storage/$UPLOAD
+          echo "Uploading $UPLOAD with label=${{ env.AC_LABEL }}"
+          $CONDA/bin/anaconda -t ${{ secrets.ANACONDA_ORG_TOKEN }} upload -u metagraph -l ${{ env.AC_LABEL }} --no-progress --force --register ./artifact_storage/$UPLOAD
