--- a/continuous_integration/environment-3.7.yml
+++ b/continuous_integration/environment-3.7.yml
@@ -2,6 +2,7 @@ name: mg
 
 channels:
 - conda-forge
+- metagraph/label/dev
 - stellargraph
 
 dependencies:
@@ -10,10 +11,10 @@ dependencies:
   - coverage
   - pytest
   - pytest-cov
-  - black
-  - conda-forge::pre-commit
+  - black >=20.8b1
+  - pre-commit
   - setuptools
-  - metagraph::metagraph
 
 # metagraph-stellargraph dependencies
-  - stellargraph::stellargraph
+  - stellargraph
+  - metagraph >=0.2.3
