--- a/.github/workflows/daily_checkup.yml
+++ b/.github/workflows/daily_checkup.yml
@@ -13,24 +13,25 @@ env:
 jobs:
   daily_check:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        shell: bash -l {0}
     steps:
-      - name: Setup conda env
+      - name: Create env
+        uses: conda-incubator/setup-miniconda@v2
+        with:
+          auto-update-conda: true
+          python-version: ${{ env.PYVER }}
+      - name: Update env
         run: |
-          source "$CONDA/etc/profile.d/conda.sh"
-          conda config --set always_yes yes --set changeps1 no
-          conda update -q conda
-          conda create -n mg python=${{ env.PYVER }} pytest coverage pytest-cov
-          conda activate mg
           # TODO: remove this hack once no longer needed; without this, tensorflow gets installed incorrectly
           #       which leads to a segfault
           conda install -c stellargraph -c defaults -c conda-forge stellargraph 'tensorflow-base>=2.3.0'
           # Install package using latest "dev" versions from metagraph channel
-          conda install -c ${{ env.CHANNELS }} metagraph-stellargraph
+          conda install -c ${{ env.CHANNELS }} metagraph-stellargraph metagraph-dev
           conda list
       - name: Pytest
         run: |
-          source "$CONDA/etc/profile.d/conda.sh"
-          conda activate mg
           python -c 'import stellargraph'
           pytest --pyargs metagraph_stellargraph
           python -m metagraph.tests
