--- a/.github/workflows/test_and_deploy.yml
+++ b/.github/workflows/test_and_deploy.yml
@@ -17,42 +17,39 @@ env:
 jobs:
   build:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        shell: bash -l {0}
     steps:
       - name: Checkout
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
-      - name: Setup conda env
+      - name: Create env
+        uses: conda-incubator/setup-miniconda@v2
+        with:
+          auto-update-conda: true
+          activate-environment: mg
+          environment-file: continuous_integration/environment.yml
+      - name: Update env
         run: |
-          source "$CONDA/etc/profile.d/conda.sh"
-          conda config --set always_yes yes --set changeps1 no
-          conda update -q conda
-          conda info -a
           conda install -q conda-build
-          conda env create -f continuous_integration/environment-${{ env.MAIN_PYVER }}.yml
-          conda activate mg
           pip install -e .
       - name: Lint with Black
         run: |
-          source "$CONDA/etc/profile.d/conda.sh"
-          conda activate mg
+          black --version
           black metagraph_stellargraph *.py --check --diff
       - name: Pytest
         run: |
-          source "$CONDA/etc/profile.d/conda.sh"
-          conda activate mg
           pytest --pyargs metagraph
       - name: Coveralls
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          source "$CONDA/etc/profile.d/conda.sh"
-          conda activate mg
           conda install -c conda-forge coveralls
           coveralls --service=github
       - name: Conda Build
         run: |
-          source "$CONDA/etc/profile.d/conda.sh"
           conda build -c ${{ env.CHANNELS }} --python ${{ env.MAIN_PYVER }} continuous_integration/conda
           # This doesn't rebuild, but simply computes the name of the file that was previously built
           OUTPUT=$(conda build --output -c ${{ env.CHANNELS }} --python ${{ env.MAIN_PYVER }} continuous_integration/conda)
@@ -72,21 +69,24 @@ jobs:
     strategy:
       matrix:
         pyver:
-          - 3.7
           - 3.8
+    defaults:
+      run:
+        shell: bash -l {0}
     steps:
       - name: Download build artifact
         uses: actions/download-artifact@v2
         with:
           name: built_package
           path: ./artifact_storage
-      - name: Setup conda env
+      - name: Create env
+        uses: conda-incubator/setup-miniconda@v2
+        with:
+          auto-update-conda: true
+          python-version: ${{ matrix.pyver }}
+      - name: Update env
         run: |
-          source "$CONDA/etc/profile.d/conda.sh"
-          conda config --set always_yes yes --set changeps1 no
-          conda update -q conda
-          conda create -n mg python=${{ matrix.pyver }} pytest coverage pytest-cov
-          conda activate mg
+          conda install -c ${{ env.CHANNELS }} metagraph-dev
           # TODO: remove this hack once no longer needed; without this, tensorflow gets installed incorrectly
           #       which leads to a segfault
           conda install -c stellargraph -c defaults -c conda-forge stellargraph 'tensorflow-base>=2.3.0'
@@ -100,8 +100,6 @@ jobs:
           conda list
       - name: Pytest
         run: |
-          source "$CONDA/etc/profile.d/conda.sh"
-          conda activate mg
           python -c 'import stellargraph'
           pytest --pyargs metagraph_stellargraph
           python -m metagraph.tests
