--- a/continuous_integration/environment.yml
+++ b/continuous_integration/environment.yml
@@ -17,5 +17,5 @@ dependencies:
 
 # Unlisted stellargraph dependencies
 # If we don't install, pip will and then things break
-  - tensorflow_estimator
+  - tensorflow-estimator
   - opt-einsum
