Swap `pip install -e .` with `python setup.py develop --no-deps`

--- a/.github/workflows/test_and_deploy.yml
+++ b/.github/workflows/test_and_deploy.yml
@@ -34,7 +34,9 @@ jobs:
       - name: Update env
         run: |
           conda install -q conda-build
-          pip install -e .
+#          The "normal" way to install locally kept installing old version of numpy and scipy on top of the conda install ones
+#          pip install -e .
+          python setup.py develop --no-deps
       - name: Lint with Black
         run: |
           black --version
