--- a/continuous_integration/environment.yml
+++ b/continuous_integration/environment.yml
@@ -8,13 +8,14 @@ channels:
 dependencies:
 # dev environment
   - python=3.8
-  - coverage
-  - pytest
-  - pytest-cov
-  - black >=20.8b1
-  - pre-commit
-  - setuptools
+  - metagraph-dev
+  - black
 
 # metagraph-stellargraph dependencies
+  - metagraph
   - stellargraph
-  - metagraph >=0.2.3
+
+# Unlisted stellargraph dependencies
+# If we don't install, pip will and then things break
+  - tensorflow-estimator
+  - opt-einsum
