--- a/.github/workflows/daily_checkup.yml
+++ b/.github/workflows/daily_checkup.yml
@@ -28,7 +28,7 @@ jobs:
           #       which leads to a segfault
           conda install -c stellargraph -c defaults -c conda-forge stellargraph 'tensorflow-base>=2.3.0'
           # Install package using latest "dev" versions from metagraph channel
-          conda install -c ${{ env.CHANNELS }} metagraph-stellargraph metagraph-dev
+          conda install -c ${{ env.CHANNELS }} metagraph-stellargraph 'metagraph-dev>=0.2.6'
           conda list
       - name: Pytest
         run: |
