--- a/continuous_integration/environment.yml
+++ b/continuous_integration/environment.yml
@@ -12,7 +12,7 @@ dependencies:
   - black
 
 # metagraph-stellargraph dependencies
-  - metagraph
+  - metagraph>=0.2.6
   - stellargraph
 
 # Unlisted stellargraph dependencies
